Changing euler class to just represent zyx rotation

--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -17,7 +17,7 @@ set(TEST_SOURCES
     TestVector3.cpp
     TestQuaternion.cpp
     TestDCM.cpp
-    #TestEuler.cpp
+    TestEuler.cpp
 )
 
 # Modern CMake for C++, chapter08/04-gtest/test/CMakeLists.txt
