Big drop of updates, initializer lists, axis angle start, enhanced tests, test cleanup

--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_SOURCES
     TestQuaternion.cpp
     TestDCM.cpp
     TestEuler.cpp
+    TestAxisAngle.cpp
 )
 
 # Modern CMake for C++, chapter08/04-gtest/test/CMakeLists.txt
